# bevy_toon_material

./: .gitignore  Cargo.toml  README.md
assets/: monkey.glb  toon.wgsl
examples/: monkey.rs  spheres.rs  spheres_textured.rs
src/: lib.rs  toon.wgsl
